// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventMedia component renders correctly for media items with video 1`] = `
<View
  style={
    Object {
      "height": 2160,
      "width": 720,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "someurl",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 2160,
          "width": 720,
        },
        undefined,
      ]
    }
  />
  <EventVideo
    eventId={undefined}
    height={300}
    videoUrl="someurl"
    width={100}
  />
  <BVLinearGradient
    colors={
      Array [
        3003121664,
        0,
      ]
    }
    end={undefined}
    locations={null}
    start={undefined}
    style={
      Object {
        "height": 130,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 720,
        "zIndex": 2,
      }
    }
  />
</View>
`;

exports[`EventMedia component renders correctly for squared images 1`] = `
<View
  style={
    Object {
      "height": 720,
      "width": 720,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "someurl",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 720,
          "width": 720,
        },
        undefined,
      ]
    }
  />
  <BVLinearGradient
    colors={
      Array [
        3003121664,
        0,
      ]
    }
    end={undefined}
    locations={null}
    start={undefined}
    style={
      Object {
        "height": 130,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 720,
        "zIndex": 2,
      }
    }
  />
</View>
`;

exports[`EventMedia component renders correctly for squared images 2`] = `
<View
  style={
    Object {
      "height": 720,
      "width": 720,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "someurl",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 720,
          "width": 720,
        },
        undefined,
      ]
    }
  />
  <BVLinearGradient
    colors={
      Array [
        3003121664,
        0,
      ]
    }
    end={undefined}
    locations={null}
    start={undefined}
    style={
      Object {
        "height": 130,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 720,
        "zIndex": 2,
      }
    }
  />
</View>
`;
